[gd_scene load_steps=3 format=3 uid="uid://dtutr15p1mfw8"]

[ext_resource type="Script" path="res://scripts/ui/inventory_box.gd" id="1_2dqc1"]
[ext_resource type="Script" path="res://scripts/food_button.gd" id="1_dmocv"]

[node name="InventoryBox" type="VBoxContainer"]
offset_right = 206.0
offset_bottom = 255.0
script = ExtResource("1_2dqc1")

[node name="InventoryLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inventory"
horizontal_alignment = 1

[node name="InventorySlot0" type="Button" parent="."]
layout_mode = 2
text = "Empty"
script = ExtResource("1_dmocv")

[node name="InventorySlot1" type="Button" parent="."]
layout_mode = 2
text = "Empty"
script = ExtResource("1_dmocv")

[node name="InventorySlot2" type="Button" parent="."]
layout_mode = 2
text = "Empty"
script = ExtResource("1_dmocv")

[node name="InventorySlot3" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Empty"
script = ExtResource("1_dmocv")

[node name="InventorySlot4" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Empty"
script = ExtResource("1_dmocv")

[node name="CurrentItemLabel" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Current: Empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrashButton" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Trash"

[node name="PoweredUpLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "TAXXIEs Hypercharged!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PoweredUpProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 2

[node name="PoweredUpTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="pressed" from="InventorySlot0" to="." method="_on_inventory_slot_0_pressed"]
[connection signal="pressed" from="InventorySlot1" to="." method="_on_inventory_slot_1_pressed"]
[connection signal="pressed" from="InventorySlot2" to="." method="_on_inventory_slot_2_pressed"]
[connection signal="pressed" from="InventorySlot3" to="." method="_on_inventory_slot_3_pressed"]
[connection signal="pressed" from="InventorySlot4" to="." method="_on_inventory_slot_4_pressed"]
[connection signal="pressed" from="TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="timeout" from="PoweredUpTimer" to="." method="_on_powered_up_timer_timeout"]
